--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ajv": "^6.5.2",
     "axios": "^0.18.0",
     "firebase": "^5.3.1",
+    "node-pre-gyp": "^0.10.3",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.1",
